--- a/style.css
+++ b/style.css
@@ -321,9 +321,10 @@ body{
         bottom: 0;
         right: 0;
         left: 0;
+        height: 100vh;
     }
     .nav{
-        width: 990px;
+        width: 890px;
         position: absolute;
         align-items: center;
         top: 7%;
@@ -604,7 +605,7 @@ body{
     }
 }
 
-@media (min-width:499px) and (max-width:989px){
+@media (min-width:799px) and (max-width:989px){
     .hero{
         width: 100%;
         height: 100vh;
@@ -622,6 +623,7 @@ body{
         bottom: 0;
         right: 0;
         left: 0;
+        height: 100vh;
     }
     .nav{
         width: 790px;
@@ -741,7 +743,7 @@ body{
         display: flex;
         gap: 20px;
         margin: 100px auto;
-        width: 790px;
+        /* width: 790px; */
         justify-content: center;
         align-items: center;
     }
@@ -821,6 +823,7 @@ body{
     }
     .mob{
         width: 50%;
+        margin-left: 29px;
     }
     .tv2{
         position: relative;
@@ -880,6 +883,623 @@ body{
     }
     .footer{
         width: 790px;
+        margin: 60px auto;
+    }
+    .contact{
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 30px;
+        color: rgba(245, 238, 238, 0.74);
+    }
+    .number{
+        color: rgba(245, 238, 238, 0.74);
+    }
+    .quick-view{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        /* width: 690px; */
+        margin-left: -32px;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+    }
+}
+
+@media (min-width:599px) and (max-width:798px){
+    
+    .hero{
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+    }
+    .hero-img{
+        width: 100%;
+        transform: scale(1.4);
+    }
+    .tint{
+        background-color: rgba(38, 36, 36, 0.27);
+        position: absolute;
+        background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.8500) 3.000%, rgba(0, 0, 0, 0.8465) 11.08%, rgba(0, 0, 0, 0.8361) 19.17%, rgba(0, 0, 0, 0.8187) 27.25%, rgba(0, 0, 0, 0.7944) 35.33%, rgba(0, 0, 0, 0.7632) 43.42%, rgba(0, 0, 0, 0.7250) 51.50%, rgba(0, 0, 0, 0.6868) 59.58%, rgba(0, 0, 0, 0.6556) 67.67%, rgba(0, 0, 0, 0.6313) 75.75%, rgba(0, 0, 0, 0.6139) 83.83%, rgba(0, 0, 0, 0.6035) 91.92%, rgba(0, 0, 0, 0.6000) 100.0%);
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 100vh;
+    }
+    .nav{
+        width: 490px;
+        position: absolute;
+        align-items: center;
+        top: 7%;
+        left: 50%;
+        display: flex;
+        justify-content: space-between;
+        transform: translate(-50%, -50%);
+    }
+    .logo{
+        color: red;
+        width: 140px;
+        height: 140px;
+        
+    }
+    .nav-btn{
+        top: 0;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+    /* .btn-flex{
+        display: flex;
+        gap: 24px;
+    } */
+    .lang-btn{
+        padding: 9px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 7px;
+        font-size: 16px;
+        background-color: #14120F;
+        border: 1px solid rgb(105, 94, 94);
+        color: white;
+        border-radius: 4px;
+        position: relative;
+        display: none;
+    }
+    .login-btn{
+        padding: 9px 26px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 14px;
+        font-size: 16px;
+        background-color: #E52313;
+        border: none;
+        color: white;
+        border-radius: 4px;
+    }
+    .content{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 30px;
+        text-align: center;
+    }
+    .disc{
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 40px;
+        margin-top: -16px;
+    }
+    .desc{
+        font-size: 16px;
+        
+    }
+    .input-email{
+        /* width: 320px; */
+        height: 56px;
+        padding: 1px 16px;
+        border: 1px solid rgba(211, 211, 211, 0.562);
+        background-color: rgba(169, 169, 169, 0.184);
+        border-radius: 4px;
+        
+    }
+    .start{
+        width: 179px;
+        height: 60px;
+        background-color: #E50815;
+        font-size: 24px;
+        font-weight: 400;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 6px 12px;
+    
+        &:hover{
+            background-color: #e50817b3;
+            transition: 0.2s;
+        }
+    }
+    .get-started{
+        display: flex;
+    }
+    .input-area{
+        display: flex;
+        gap: 8px;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .mt{
+        margin-top: 4px;
+    }
+    
+    
+    /* Section 2 Begins */
+    .container{
+        color: white;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        margin: 100px auto;
+        /* width: 790px; */
+        justify-content: center;
+        align-items: center;
+    }
+    /* container TV */
+    .bg-tv{ 
+        width: 100%;
+        position: relative;
+    }
+    .left{
+        width: 50%;
+        text-align: center;
+        
+    }
+    .right{
+        width: 50%;
+    }
+    .video{
+        position: absolute;
+        width: 75%;
+        object-fit: contain;
+        height: 94%;
+        margin-left: 64px;
+    }
+    .tv{
+        position: relative;
+        width: 100%;
+    }
+    section{
+        border-bottom: 8px solid gray;
+    }
+    .heading{
+        font-size: 28px;
+    }
+    .sub-head{
+        font-size: 18px;
+        font-weight: 200;
+    }
+    .section-two-left{
+        width: 50%;
+        margin-left: 62px;
+    }
+    .mob-img{
+        position: relative;
+        width: 80%;
+        align-items: center;
+        /* margin-left: 42px; */
+    }
+    .block{
+        position: absolute;
+        display: flex;
+        /* justify-content: space-between; */
+        gap: 6px;
+        width: 200px;
+        border-radius: 12px;
+        padding: 6px 16px;
+        border: 2px solid lightslategray;
+        background-color: black;
+        align-items: center;
+        /* margin-left: 18px; */
+        margin-top: -42px;
+    }
+    .movie-title{
+        text-align: center;
+        align-items: center;
+    }
+    .title{
+        /* font-size: 18px; */
+        font-weight: bolder;
+        color: white;
+    }
+    .download{
+        font-size: 16px;
+        color: rgb(42, 42, 221);
+    }
+    .stranger-cover{
+        height: 4rem;
+    }
+    .load{
+        width: 16%;
+    }
+    .mob{
+        width: 50%;
+        margin-left: 29px;
+    }
+    .tv2{
+        position: relative;
+        width: 90%;
+    }
+    .bg-tv2{
+        width: 100%;
+        position: relative;
+    }
+    .video1{
+        position: absolute;
+        width: 56%;
+        object-fit: contain;
+        height: 70%;
+        margin-left: 82px;
+    }
+    .children-img{
+        width: 100%;
+    }
+    .container-faq{
+        /* width: 790px; */
+        background-color: black;
+        text-align: center;
+        margin: 10px auto;
+    }
+    .faq-title{
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+    }
+    .faq-one{
+        background-color: rgba(51, 49, 49, 0.781);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 10px;
+        border: none;
+    }
+    .question{
+        font-size: 28px;
+        color: white;
+        margin-left: 28px;
+    }
+    .mr{
+        margin-right: 28px;
+    }
+    .membership{
+        color: white;
+        margin-top: 40px;
+        font-size: 22px;
+        font-weight: bold;
+    }
+    .get-btn-flex{
+        display: flex;
+        align-items: center;
+    }
+    .footer{
+        /* width: 790px; */
+        margin: 60px auto;
+    }
+    .contact{
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 30px;
+        color: rgba(245, 238, 238, 0.74);
+    }
+    .number{
+        color: rgba(245, 238, 238, 0.74);
+    }
+    .quick-view{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        /* width: 690px; */
+        margin-left: -32px;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+    }
+}
+
+@media (max-width:598px){
+    .hero{
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+    }
+    .hero-img{
+        width: 100%;
+        transform: scale(1.4);
+    }
+    .tint{
+        background-color: rgba(38, 36, 36, 0.27);
+        position: absolute;
+        background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.8500) 3.000%, rgba(0, 0, 0, 0.8465) 11.08%, rgba(0, 0, 0, 0.8361) 19.17%, rgba(0, 0, 0, 0.8187) 27.25%, rgba(0, 0, 0, 0.7944) 35.33%, rgba(0, 0, 0, 0.7632) 43.42%, rgba(0, 0, 0, 0.7250) 51.50%, rgba(0, 0, 0, 0.6868) 59.58%, rgba(0, 0, 0, 0.6556) 67.67%, rgba(0, 0, 0, 0.6313) 75.75%, rgba(0, 0, 0, 0.6139) 83.83%, rgba(0, 0, 0, 0.6035) 91.92%, rgba(0, 0, 0, 0.6000) 100.0%);
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 100vh;
+    }
+    .nav{
+        /* width: 490px; */
+        position: absolute;
+        align-items: center;
+        top: 7%;
+        left: 50%;
+        display: flex;
+        justify-content: space-between;
+        transform: translate(-50%, -50%);
+    }
+    .logo{
+        color: red;
+        width: 140px;
+        height: 140px;
+        
+    }
+    .nav-btn{
+        top: 0;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+    /* .btn-flex{
+        display: flex;
+        gap: 24px;
+    } */
+    .lang-btn{
+        padding: 9px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 7px;
+        font-size: 16px;
+        background-color: #14120F;
+        border: 1px solid rgb(105, 94, 94);
+        color: white;
+        border-radius: 4px;
+        position: relative;
+        display: none;
+    }
+    .login-btn{
+        padding: 9px 26px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 14px;
+        font-size: 16px;
+        background-color: #E52313;
+        border: none;
+        color: white;
+        border-radius: 4px;
+    }
+    .content{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 30px;
+        text-align: center;
+    }
+    .disc{
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 40px;
+        margin-top: -16px;
+    }
+    .desc{
+        font-size: 16px;
+        
+    }
+    .input-email{
+        /* width: 320px; */
+        height: 56px;
+        padding: 1px 16px;
+        border: 1px solid rgba(211, 211, 211, 0.562);
+        background-color: rgba(169, 169, 169, 0.184);
+        border-radius: 4px;
+        
+    }
+    .start{
+        width: 179px;
+        height: 60px;
+        background-color: #E50815;
+        font-size: 24px;
+        font-weight: 400;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 6px 12px;
+    
+        &:hover{
+            background-color: #e50817b3;
+            transition: 0.2s;
+        }
+    }
+    .get-started{
+        display: flex;
+    }
+    .input-area{
+        display: flex;
+        gap: 8px;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .mt{
+        margin-top: 4px;
+    }
+    
+    
+    /* Section 2 Begins */
+    .container{
+        color: white;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        margin: 100px auto;
+        /* width: 790px; */
+        justify-content: center;
+        align-items: center;
+    }
+    /* container TV */
+    .bg-tv{ 
+        width: 100%;
+        position: relative;
+    }
+    .left{
+        width: 50%;
+        text-align: center;
+        
+    }
+    .right{
+        width: 50%;
+    }
+    .video{
+        position: absolute;
+        width: 75%;
+        object-fit: contain;
+        height: 94%;
+        margin-left: 64px;
+    }
+    .tv{
+        position: relative;
+        width: 100%;
+    }
+    section{
+        border-bottom: 8px solid gray;
+    }
+    .heading{
+        font-size: 28px;
+    }
+    .sub-head{
+        font-size: 18px;
+        font-weight: 200;
+    }
+    .section-two-left{
+        width: 50%;
+        margin-left: 62px;
+    }
+    .mob-img{
+        position: relative;
+        width: 80%;
+        align-items: center;
+        margin-left: 42px;
+    }
+    .block{
+        position: absolute;
+        display: flex;
+        /* justify-content: space-between; */
+        gap: 6px;
+        width: 230px;
+        border-radius: 12px;
+        padding: 6px 16px;
+        border: 2px solid lightslategray;
+        background-color: black;
+        align-items: center;
+        margin-left: 18px;
+        margin-top: -42px;
+    }
+    .movie-title{
+        text-align: center;
+        align-items: center;
+    }
+    .title{
+        /* font-size: 18px; */
+        font-weight: bolder;
+        color: white;
+    }
+    .download{
+        font-size: 16px;
+        color: rgb(42, 42, 221);
+    }
+    .stranger-cover{
+        height: 4rem;
+    }
+    .load{
+        width: 16%;
+    }
+    .mob{
+        width: 50%;
+        margin-left: 29px;
+    }
+    .tv2{
+        position: relative;
+        width: 90%;
+    }
+    .bg-tv2{
+        width: 100%;
+        position: relative;
+    }
+    .video1{
+        position: absolute;
+        width: 56%;
+        object-fit: contain;
+        height: 70%;
+        margin-left: 82px;
+    }
+    .children-img{
+        width: 100%;
+    }
+    .container-faq{
+        /* width: 790px; */
+        background-color: black;
+        text-align: center;
+        margin: 10px auto;
+    }
+    .faq-title{
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+    }
+    .faq-one{
+        background-color: rgba(51, 49, 49, 0.781);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 10px;
+        border: none;
+    }
+    .question{
+        font-size: 28px;
+        color: white;
+        margin-left: 28px;
+    }
+    .mr{
+        margin-right: 28px;
+    }
+    .membership{
+        color: white;
+        margin-top: 40px;
+        font-size: 22px;
+        font-weight: bold;
+    }
+    .get-btn-flex{
+        display: flex;
+        align-items: center;
+    }
+    .footer{
+        /* width: 790px; */
         margin: 60px auto;
     }
     .contact{
